cmake_minimum_required(VERSION 3.22)
project(advent_of_code_2022)

# add_compile_options(--coverage)

add_executable(day_01_1 src/day_1/day_1_puzzle_1.cpp)
add_executable(day_01_2 src/day_1/day_1_puzzle_2.cpp)
add_executable(day_02_1 src/day_2/day_2_puzzle_1.cpp)
add_executable(day_02_2 src/day_2/day_2_puzzle_2.cpp)
add_executable(day_03_1 src/day_3/day_3_puzzle_1.cpp)
add_executable(day_03_2 src/day_3/day_3_puzzle_2.cpp)
add_executable(day_04_1 src/day_4/day_4_puzzle_1.cpp)
add_executable(day_05_1 src/day_5/day_5_puzzle_1.cpp)



